--- a/app/assets/stylesheets/images.css.scss
+++ b/app/assets/stylesheets/images.css.scss
@@ -1,3 +1,22 @@
 // Place all the styles related to the images controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+ul {
+	margin: 0;
+	padding: 0;
+	list-style: none;
+}
+
+li {
+
+}
+
+.image {
+	display: inline-block;
+    width: 250px;
+	text-align: center;
+    vertical-align: top;
+    margin-right: 20px;
+    margin-top: 20px;
+}
