--- a/app/views/images/index.html.erb
+++ b/app/views/images/index.html.erb
@@ -5,6 +5,9 @@
   <div class="image">
   <li><%= link_to (image_tag image.image_url, :size => "250x250"), image.image_url %></li>
   <em>
+	<% if image.user %>
+	| <%= image.user.username %>
+	<% end %>
     | <%= pluralize image.reputation_value_for(:votes).to_i, "vote" %>
     | <%= link_to "up", vote_image_path(image, type: "up"), method: "post" %>
     | <%= link_to "down", vote_image_path(image, type: "down"), method: "post" %>
