--- a/app/views/images/index.html.erb
+++ b/app/views/images/index.html.erb
@@ -3,7 +3,7 @@
 <ul>
 <% @images.each do |image| %>
   <div class="image">
-  <li><%= link_to (image_tag image.image_url, :size => "250x250"), image.image_url %></li>
+  <li><%= link_to (image_tag image.image_url, :size => "250x250", :class => "img-polaroid"), image.image_url %></li>
   <em>
 	<% if image.user %>
 	| <%= image.user.username %>
