--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,22 +1,57 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>ImageRanker</title>
+  <title>Image Ranker</title>
+  <!--[if lt IE 9]>
+    <script src="http://html5shim.googlecode.com/svn/trunk/html5.js" type="text/javascript"></script>
+  <![endif]-->
   <%= stylesheet_link_tag    "application", :media => "all" %>
   <%= javascript_include_tag "application" %>
   <%= csrf_meta_tags %>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
-<div id="header">
-	<% if current_user %>
-	  Logged in as <%= current_user.email %>.
-	  <%= link_to "Log Out", logout_path %>
-	<% else %>
-	  <%= link_to "Sign Up", signup_path %> or
-	  <%= link_to "Log In", login_path %>
-	<% end %>
-</div>	
-<%= yield %>
+  <div class="navbar navbar-fixed-top">
+    <div class="navbar-inner">
+      <div class="container">
+        <a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+        </a>
+        <a class="brand" href="/">Image Ranker</a>
+        <div class="nav-collapse">
+          <ul class="nav pull-right">
+	          <% if current_user %>
+						  <li class= "dropdown">
+						    <a href="#" class="dropdown-toggle" data-toggle="dropdown">
+						      <%= current_user.username %>
+						      <b class="caret"></b>
+						    </a>
+						    <ul class="dropdown-menu">
+							    <li><%= link_to "Log Out", logout_path %></li>
+							  </ul>
+							</li>
+						<% else %>
+						  <li><%= link_to "Sign Up", signup_path %></li>
+						  <li><%= link_to "Log In", login_path %></li>
+						<% end %>
+          </ul>
+        </div>
+      </div>
+    </div>
+  </div>
 
+  <div class="container">
+	  <% flash.each do |name, msg| %>
+		  <div class="alert alert-<%= name == :notice ? "success" : "error" %>">
+		    <a class="close" data-dismiss="alert">×</a>
+		    <%= msg %>
+		  </div>
+		<% end %>
+    <div class="row">
+      <div class="span12"><%= yield %></div>
+    </div>
+  </div>
 </body>
 </html>
