--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -34,6 +34,7 @@
 							</li>
 						<% else %>
 						  <li><%= link_to "Sign Up", signup_path %></li>
+						  <li class="divider"></li>
 						  <li><%= link_to "Log In", login_path %></li>
 						<% end %>
           </ul>
