--- a/app/views/images/new.html.erb
+++ b/app/views/images/new.html.erb
@@ -3,7 +3,7 @@
 <%= form_for @image do |f| %>
 	<div class="field">
 	    <%= f.label :image_link %><br />
-	    <%= f.text_field :image_url, :id => 'image_url' %>
+	    <%= f.text_field :image_url, :id => "image_url" %>
 	</div>
     <div class="actions"><%= f.submit "Submit", :id => "submit" %></div>
 <% end %>
