--- a/app/views/images/new.html.erb
+++ b/app/views/images/new.html.erb
@@ -1,9 +1,20 @@
 <h1>Add an Image</h1>
 <p> Make sure you are adding an image link (should end in .jpg/.gif/.png ect.) </p>
 <%= form_for @image do |f| %>
+	<% if @image.errors.any? %>
+	  <div class="alert alert-error">
+	    <h2>Oops.</h2>
+	    <ul>
+	      <% @image.errors.full_messages.each do |message| %>
+	        <li><%= message %></li>
+	      <% end %>
+	    </ul>
+	  </div>
+	<% end %>
+
 	<div class="field">
 	    <%= f.label :image_link %><br />
 	    <%= f.text_field :image_url, :id => "image_url" %>
 	</div>
-    <div class="actions"><%= f.submit "Submit", :id => "submit" %></div>
+    <div class="actions"><%= f.submit "Submit", :id => "submit", :class => "btn btn-primary" %></div>
 <% end %>
