--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,9 +1,9 @@
 <h1>Sign Up</h1>
 
-<%= form_for @user do |f| %>
+<%= form_for @user, :html => {:class => "form-horizontal"} do |f| %>
   <% if @user.errors.any? %>
-    <div class="error_messages">
-      <h2>Form is invalid</h2>
+    <div class="alert alert-error">
+      <h2>Oops.</h2>
       <ul>
         <% @user.errors.full_messages.each do |message| %>
           <li><%= message %></li>
@@ -12,21 +12,17 @@
     </div>
   <% end %>
   
+  <div class="field"> 
+	  <%= f.text_field :username, :placeholder => "Username"  %>
+  </div>	
   <div class="field">
-    <%= f.label :username %><br />
-    <%= f.text_field :username %>
+    <%= f.text_field :email, :placeholder => "Email (@my.uri.edu)"%>
   </div>
   <div class="field">
-    <%= f.label :email %><br />
-    <%= f.text_field :email %>
+    <%= f.password_field :password, :placeholder => "Password" %>
   </div>
   <div class="field">
-    <%= f.label :password %><br />
-    <%= f.password_field :password %>
+    <%= f.password_field :password_confirmation, :placeholder => "Password confirmation" %>
   </div>
-  <div class="field">
-    <%= f.label :password_confirmation %><br />
-    <%= f.password_field :password_confirmation %>
-  </div>
-  <div class="actions"><%= f.submit "Sign Up", :id => "sign_up" %></div>
+  <div class="actions"><%= f.submit "Sign Up", :id => "sign_up", :class => "btn"  %></div>
 <% end %>
