Add ajax image submission

--- a/app/views/images/index.html.erb
+++ b/app/views/images/index.html.erb
@@ -1,5 +1,5 @@
 <h1>What Hot at URI?</h1>
-<%= link_to "Add Image", new_image_path %>
+<%= link_to "Add Image", '#', :class => 'add_image' %>
 <ul>
 <% @images.each do |image| %>
   <div class="image">
