--- a/app/views/images/new.html.erb
+++ b/app/views/images/new.html.erb
@@ -1,5 +1,4 @@
 <h1>Add an Image</h1>
-<p> Make sure you are adding an image link (should end in .jpg/.gif/.png ect.) </p>
 <%= form_for @image do |f| %>
 	<% if @image.errors.any? %>
 	  <div class="alert alert-error">
@@ -13,8 +12,7 @@
 	<% end %>
 
 	<div class="field">
-	    <%= f.label :image_link %><br />
-	    <%= f.text_field :image_url, :id => "image_url" %>
+	    <%= f.text_field :image_url, :id => "image_url" , :class => 'input-xlarge', :placeholder => 'Image link (.jpg/.gif/.png)'%>
 	</div>
-    <div class="actions"><%= f.submit "Submit", :id => "submit", :class => "btn btn-primary" %></div>
+    <div class="actions"><%= f.submit "Submit", :id => "submit", :class => "btn" %></div>
 <% end %>
