--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,6 +1,6 @@
 <h1>Sign Up</h1>
 
-<%= form_for @user, :html => {:class => "form-horizontal"} do |f| %>
+<%= form_for @user do |f| %>
   <% if @user.errors.any? %>
     <div class="alert alert-error">
       <h2>Oops.</h2>
