--- a/app/views/images/index.html.erb
+++ b/app/views/images/index.html.erb
@@ -1,4 +1,4 @@
-<h1>What Hot at URI?</h1>
+<h1>What's Hot at URI?</h1>
 <%= link_to "Add Image", '#', :class => 'add_image' %>
 <ul>
 <% @images.each do |image| %>
