Fix sessions bug. Add pagination.

--- a/app/assets/stylesheets/images.css.scss
+++ b/app/assets/stylesheets/images.css.scss
@@ -14,14 +14,19 @@ li {
 
 .image {
 	display: inline-block;
-    width: 250px;
+  width: 250px;
 	text-align: center;
-    vertical-align: top;
-    margin-right: 20px;
-    margin-top: 20px;
+  vertical-align: top;
+  margin-right: 20px;
+  margin-top: 20px;
 }
 
 .field {
   padding-bottom: 10px;
   padding-top: 10px;
+}
+.pages {
+  margin-top: 20px;
+  margin-right: 90px;
+  float: right;
 }
