Link signup button.

--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -4,9 +4,7 @@
       <h1>What's hot at your school?</h1>
       <p>Image Ranker makes it easy for you to find out. Add your favorite images and vote on others. What will be on your school's board?</p>
       <p>
-        <a class="btn btn-primary btn-large">
-          Sign up
-        </a>
+        <%= link_to "Sign up", signup_path, :class => 'btn btn-primary btn-large' %>
       </p>
     </div>  
   </div>
