--- a/app/views/user_mailer/signup_confirmation.html.erb
+++ b/app/views/user_mailer/signup_confirmation.html.erb
@@ -2,6 +2,6 @@
 
 <p>Your almost there! Just click the link below to confirm your email!</p>
 
-<%= link_to "Confirm email!", root_url + "users/#{@user.id}/confirm/#{@user.confirmation_code}" %> 
+<%= link_to root_url + "users/#{@user.id}/confirm/#{@user.confirmation_code}", root_url + "users/#{@user.id}/confirm/#{@user.confirmation_code}" %> 
 
 <p>Happy Ranking!</p>
