--- a/app/views/images/index.html.erb
+++ b/app/views/images/index.html.erb
@@ -3,14 +3,16 @@
 <ul>
 <% @images.each do |image| %>
   <div class="image">
-    <li><%= link_to (image_tag image.image_url, :size => "250x250", :class => "img-polaroid"), image.image_url %></li>
+    <li><%= link_to (image_tag image.image_url, :size => "250x250", :class => "img-polaroid"), image_path(image.id) %></li>
     <em>
-      | <%= link_to "up", vote_image_path(image, type: "up"), method: "post" %>
-      | <%= link_to "down", vote_image_path(image, type: "down"), method: "post" %>
-	    | <%= pluralize image.reputation_for(:votes).to_i, "vote" %>
       <% if current_user == image.user %>
         | <%= link_to "delete", image, :method => :delete, :class => 'action' %>
+      <% else %>
+        | <%= link_to "up", vote_image_path(image, type: "up"), method: "post" %>
+        | <%= link_to "down", vote_image_path(image, type: "down"), method: "post" %>  
       <% end %>
+	    | <%= pluralize image.reputation_for(:votes).to_i, "vote" %>
+      | <%= pluralize image.comments.count, "comment" %>
     </em>
   </div>
 <% end %>
