--- a/app/views/images/show.html.erb
+++ b/app/views/images/show.html.erb
@@ -1,5 +1,7 @@
-<%= image_tag '#' %>
-<h2>Comments</h2>
+<%= image_tag @image.image_url, :size => "500x500", :class => "img-polaroid" %>
+<h3>Comments</h3>
 
 <%= render "comments/comments" %>
 <%= render "comments/form" %>
+
+<%= link_to "<< Back", images_path %>
