Style comments. Change sign in form.

--- a/app/views/images/index.html.erb
+++ b/app/views/images/index.html.erb
@@ -12,7 +12,7 @@
         | <%= link_to "down", vote_image_path(image, type: "down"), method: "post" %>  
       <% end %>
 	    | <%= pluralize image.reputation_for(:votes).to_i, "vote" %>
-      | <%= pluralize image.comments.count, "comment" %>
+      | <%= link_to (pluralize image.comments.count, "comment"), image_path(image.id) %>
     </em>
   </div>
 <% end %>
