--- a/app/assets/stylesheets/images.css.scss
+++ b/app/assets/stylesheets/images.css.scss
@@ -30,3 +30,10 @@ li {
   margin-right: 90px;
   float: right;
 }
+.add_image {
+  display: inline;
+}
+.sort {
+  display:inline;
+  margin-left: 50px;
+}
