--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,11 +1,13 @@
-<div class="row-fluid">
-  <div class="span12">
-    <div class="hero-unit">
-      <h1>What's hot at your school?</h1>
-      <p>Image Ranker makes it easy for you to find out. Add your favorite images and vote on others. What will be on your school's board?</p>
-      <p>
-        <%= link_to "Sign up", signup_path, :class => 'btn btn-primary btn-large' %>
-      </p>
-    </div>  
+<div class="front">  
+  <div class="row-fluid">
+    <div class="span12">
+      <div class="hero-unit">
+        <h1>What's hot at URI?</h1>
+        <p>Image Ranker makes it easy for you to find out. Add your favorite images and vote on others. What will be on the board today?</p>
+        <p>
+          <%= link_to "Sign up", signup_path, :class => 'btn btn-primary btn-large' %>
+        </p>
+      </div>  
+    </div>
   </div>
-</div>
+</div>  
