style mobile layout

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -50,8 +50,7 @@
 		    <%= msg %>
 		  </div>
 		<% end %>
-    <div class="row">
-      <div class="span12"><%= yield %></div>
+    <%= yield %>
     </div>
   	<footer style="height: 25px; padding-top: 75px; font-size: 10px; text-align: center;">
 		</footer>
