--- a/app/views/comments/_comments.html.erb
+++ b/app/views/comments/_comments.html.erb
@@ -1,7 +1,7 @@
 <div id="comments">
   <% @comments.each do |comment| %>
     <div class="comment">
-      <p><b><%= comment.created_at.getlocal.strftime('%D %I:%M%P') %></b>: <%= comment.content %></p>
+      <p><b><%= comment.created_at.strftime('%D %I:%M%P') %></b>: <%= comment.content %></p>
     </div>
   <% end %>
 </div>
