Add instructions for file upload

--- a/app/views/images/new.html.erb
+++ b/app/views/images/new.html.erb
@@ -16,3 +16,5 @@
 	</div>
     <div class="actions"><%= f.submit "Submit", :id => "submit", :class => "btn" %></div>
 <% end %>
+
+<p> If you have an image you need to upload, use <a href="http://postimg.org/">http://postimg.org/</a> and copy and paste the direct link in the box above!</p>  
