Add instructions for file upload

--- a/app/views/images/new.html.erb
+++ b/app/views/images/new.html.erb
@@ -17,4 +17,4 @@
     <div class="actions"><%= f.submit "Submit", :id => "submit", :class => "btn" %></div>
 <% end %>
 
-<p> If you have an image you need to upload, use <a href="http://postimg.org/">http://postimg.org/</a> and copy and paste the direct link in the box above!</p>  
+<p> If you have an image you need to upload, use <a href="http://imgur.com/">http://imgur.com/</a> and copy and paste the direct link in the box above!</p>  
