--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -24,7 +24,7 @@
         <div class="nav-collapse">
           <ul class="nav pull-right">
 	          <% if current_user %>
-						  <li class= "dropdown">
+						  <li class= "dropdown hidden-phone">
 						    <a href="#" class="dropdown-toggle" data-toggle="dropdown">
 						      <%= current_user.username %>
 						      <b class="caret"></b>
@@ -33,6 +33,7 @@
 							    <li><%= link_to "Log Out", logout_path %></li>
 							  </ul>
 							</li>
+              <li class="visible-phone"><%= link_to "Log Out", logout_path %></li>
 						<% else %>
 						  <li><%= link_to "Sign Up", signup_path %></li>
 						  <li class="divider"></li>
