--- a/app/views/images/index.html.erb
+++ b/app/views/images/index.html.erb
@@ -12,11 +12,11 @@
     <li><%= link_to (image_tag image.image_url, :size => "265x265", :class => "img-polaroid"), image_path(image.id) %></li>
     <em>
       <% if image.reputation_for(:votes).to_i > 0  %>
-	      <b style="color: green;">+<%= image.reputation_for(:votes).to_i %></b> 
+	      <b style="color: green; font-size: 1.2em;">+<%= image.reputation_for(:votes).to_i %></b> 
       <% elsif image.reputation_for(:votes).to_i == 0 %> 
-        <b><%= image.reputation_for(:votes).to_i %></b>  
+        <b style="font-size: 1.2em;"><%= image.reputation_for(:votes).to_i %></b>  
       <%  else %> 
-        <b style="color: red;"><%= image.reputation_for(:votes).to_i %></b>
+        <b style="color: red; font-size: 1.2em;"><%= image.reputation_for(:votes).to_i %></b>
       <% end %> 
       <br />
       <% if current_user == image.user %>
