--- a/app/views/images/show.html.erb
+++ b/app/views/images/show.html.erb
@@ -1,4 +1,18 @@
 <%= image_tag @image.image_url, :size => "500x500", :class => "img-polaroid" %>
+<p><i> Submitted at <%= (@image.created_at - 4.hours).strftime('%D %I:%M%P') %> </i></p>
+<% if @image.reputation_for(:votes).to_i > 0  %>
+  <b style="color: green; font-size: 1.2em;">+<%= @image.reputation_for(:votes).to_i %></b> 
+<% elsif @image.reputation_for(:votes).to_i == 0 %> 
+  <b style="font-size: 1.2em;"><%= @image.reputation_for(:votes).to_i %></b>  
+<%  else %> 
+  <b style="color: red; font-size: 1.2em;"><%= @image.reputation_for(:votes).to_i %></b>
+<% end %> 
+<br />
+<% if current_user == @image.user %>
+<% else %>
+  | <%= link_to "up", vote_image_path(@image, type: "up"), method: "post" %> 
+  | <%= link_to "down", vote_image_path(@image, type: "down"), method: "post" %> |
+<% end %>
 <h3>Comments</h3>
 
 <%= render "comments/comments" %>
