--- a/app/views/user_mailer/signup_confirmation.text.erb
+++ b/app/views/user_mailer/signup_confirmation.text.erb
@@ -1,7 +1,7 @@
 <%= @user.username %>,
 
-Your almost there! Just click the link below to confirm your email!
+Your almost there! Just visit the link below to confirm your email!
 
-<%= link_to "Validate Email!", root_url + "users/#{@user.id}/confirm/#{@user.confirmation_code}" %> 
+<%= root_url + "users/#{@user.id}/confirm/#{@user.confirmation_code}" %> 
 
 Happy Ranking!
