Improve mail templates.

--- a/app/views/user_mailer/signup_confirmation.text.erb
+++ b/app/views/user_mailer/signup_confirmation.text.erb
@@ -1,6 +1,6 @@
 <%= @user.username %>,
 
-Your almost there! Just visit the link below to confirm your email!
+Your almost there! Confirm your email below!
 
 <%= root_url + "users/#{@user.id}/confirm/#{@user.confirmation_code}" %> 
 
