Add meme generator link.

--- a/app/views/images/new.html.erb
+++ b/app/views/images/new.html.erb
@@ -18,3 +18,5 @@
 <% end %>
 
 <p> If you have an image you need to upload, use <a class="visible-phone" href="http://imgur.com/" target=newtab>http://imgur.com/</a><a class="hidden-phone" href="http://postimg.org/" target=newtab>http://postimg.org/</a> and copy and paste the direct link in the box above!</p>  
+
+<p> To make original memes check out <a href="http://weknowmemes.com/generator/generator/">http://weknowmemes.com/</a>
