--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -19,7 +19,7 @@
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
         </a>
-        <a class="brand" href="/">Image Ranker</a>
+        <a class="brand" href="/" style="margin-bottom: -24px;"><%= image_tag("logo.png") %></a>
         <div class="nav-collapse">
           <ul class="nav pull-right">
 	          <% if current_user %>
