Remove gif support.

--- a/app/views/images/new.html.erb
+++ b/app/views/images/new.html.erb
@@ -12,7 +12,7 @@
 	<% end %>
 
 	<div class="field">
-	    <%= f.text_field :image_url, :id => "image_url" , :class => 'input-xlarge', :placeholder => 'Image link (.jpg/.gif/.png)'%>
+	    <%= f.text_field :image_url, :id => "image_url" , :class => 'input-xlarge', :placeholder => 'Image link (.jpg/.png)'%>
 	</div>
     <div class="actions"><%= f.submit "Submit", :id => "submit", :class => "btn" %></div>
 <% end %>
