add support for all emails

--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -16,7 +16,7 @@
 	  <%= f.text_field :username, :placeholder => "Username"  %>
   </div>	
   <div class="field">
-    <%= f.text_field :email, :placeholder => "Email (@my.uri.edu)"%>
+    <%= f.text_field :email, :placeholder => "Email"%>
   </div>
   <div class="field">
     <%= f.password_field :password, :placeholder => "Password" %>
