--- a/app/views/images/index.html.erb
+++ b/app/views/images/index.html.erb
@@ -1,4 +1,4 @@
-<h1>University of Rhode Island</h1>
+<h1><%= @school.name %></h1>
 <div class="add_image">
   <%= link_to "Add Image", new_image_path, :class => 'add_image btn btn-primary' %>
 </div>
@@ -19,11 +19,11 @@
         <b style="color: red; font-size: 1.2em;"><%= image.reputation_for(:votes).to_i %></b>
       <% end %> 
       <br />
-      <% if current_user == image.user && current_user.admin? == false %>
+      <% if current_user && current_user == image.user && current_user.admin? == false %>
         | <%= link_to "delete", image, :method => :delete, :class => 'action' %> 
       <% else %>
-        | <%= link_to "up", vote_image_path(image, type: "up"), method: "post" %> 
-        | <%= link_to "down", vote_image_path(image, type: "down"), method: "post" %>  
+        | <%= link_to "up", vote_image_path(image, type: "up"), :method => :post %> 
+        | <%= link_to "down", vote_image_path(image, type: "down"), :method => :post %>  
       <% end %>
       | <%= link_to (pluralize image.comments.count, "comment"), image_path(image.id) %> |  
     </em>
