--- a/app/views/schools/index.html.erb
+++ b/app/views/schools/index.html.erb
@@ -10,7 +10,7 @@
   <%= csrf_meta_tags %>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
-<body>
+<body style="background: #000000 url(/assets/debut_dark.png) repeat left top;">
   <div class="container">
 	  <% flash.each do |name, msg| %>
 		  <div class="alert alert-<%= name == :notice ? "success" : "error" %>">
@@ -18,11 +18,29 @@
 		    <%= msg %>
 		  </div>
 		<% end %>
-    <% @schools.each do |school| %>
-      <%= link_to school.name, root_url(subdomain: school.subdomain) %>
-    <% end %>  
+    <div class="main-logo">
+      <%= image_tag("large_logo.png") %>
+    </div>  
+      <div class="school-container">
+        <div class="school-dropdown">
+        <ul class="nav nav-pills">
+          <div class="btn-group" id="school_menu">
+            <a class="btn-large btn-primary dropdown-toggle" data-toggle="dropdown" href="#">
+              Select Your School
+              <span class="caret"></span>
+            </a>
+            <ul class="dropdown-menu">
+              <% @schools.each do |school| %>
+                <li><%= link_to school.name, root_url(subdomain: school.subdomain) %></li>
+              <% end %>
+            </ul>
+          </li>
+        </ul>
+      </div> 
+    </div> 
   </div>
-  <footer style="height: 25px; padding-top: 75px; font-size: 10px; text-align: center;">
+  <footer style="height: 25px; padding-top: 50px; font-size: 10px; text-align: center;">
+    <a href="http://www.twitter.com/imageranker">@imageranker</a>
 	</footer>
 </body>
 </html>
