Add metatag support.

--- a/app/views/images/index.html.erb
+++ b/app/views/images/index.html.erb
@@ -1,4 +1,4 @@
-<h1><%= @school.name %></h1>
+<h1><%= title @school.name %></h1>
 <div class="add_image">
   <%= link_to "Add Image", new_image_path, :class => 'add_image btn btn-primary' %>
 </div>
