--- a/app/views/schools/index.html.erb
+++ b/app/views/schools/index.html.erb
@@ -1,13 +1,16 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Image Ranker</title>
   <!--[if lt IE 9]>
     <script src="http://html5shim.googlecode.com/svn/trunk/html5.js" type="text/javascript"></script>
   <![endif]-->
   <%= stylesheet_link_tag    "application", :media => "all" %>
   <%= javascript_include_tag "application" %>
   <%= csrf_meta_tags %>
+  <%= display_meta_tags :site => 'Image Ranker' %>
+  <% set_meta_tags :title => 'Home',
+                   :description => "Share and rate your school's hottest images.",
+                   :keywords => 'Image, Ranker, URI, Rhode Island, College, Brown' %>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body style="background: #000000 url(/assets/debut_dark.png) repeat left top; padding-top: 60px;">
